# cmake-example

./: .dir-locals.el  .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  config.h.in  console.cpp  console.h  main.cpp
console/: CMakeLists.txt  console.cpp  console.h
graphics/: CMakeLists.txt  Circle.cpp  Circle.h  Line.cpp  Line.h  object.h
graphics/core/: CMakeLists.txt  core.cpp  core.h
toolchains/: gcc-arm-eabi.cmake
ui/: CMakeLists.txt  gui.cpp  gui.h
